feat(creditsEditor): The GTNH Credits Editor application